--- a/subtitulos/daruma.html
+++ b/subtitulos/daruma.html
@@ -166,7 +166,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="../aos.js"></script>
-    <script src="../daruma.js"></script>
+    <script src="../Amulets.js"></script>
     <script type="text/javascript">
       AOS.init();
     </script>
