--- a/subtitulos/daruma.html
+++ b/subtitulos/daruma.html
@@ -68,52 +68,52 @@
         <div class="row row-cols-3 row-cols-md-3 g-4">
           <div class="card col-md-3" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" style="width: 18rem">
             <img src="../imagenes/daruma-rojo.png" class="card-img-top" alt="Daruma rojo" />
-            <div class="card-body">
+            <div class="card-item card-body">
               <h5 id="title_daruma-red" class="card-title">Daruma Rojo</h5>
               <p class="card-text">Para la buena suerte, la felicidad, el miedo, la ira y el sol.</p>
               <p id="price_daruma-red" class="price_amulet"></p>
               <form id="cart_daruma-red">
-                <button type="submit" class="btn btn-primary">Comprar ahora</button>
-                <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                <button  id="buyProduct" class="btn btn-primary">Comprar ahora</button>
+                <button type="submit" class="addCartBtn btn btn-secondary">Agregar al carrito</button>
                 <input id="amount" type="number" value="0" min="0" />
               </form>
             </div>
           </div>
           <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
             <img src="../imagenes/daruma-verde.png" class="card-img-top" alt="Daruma verde" />
-            <div class="card-body">
+            <div class="card-item card-body">
               <h5 class="card-title">Daruma verde</h5>
               <p class="card-text">Vitalidad. Mejorar la salud y la condición física.</p>
               <p id="price_daruma-green" class="price_amulet"></p>
               <form id="cart_daruma-green">
                 <button type="submit" class="btn btn-primary">Comprar ahora</button>
-                <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                <button type="submit" class="addCartBtn btn btn-secondary">Agregar al carrito</button>
                 <input id="amount" type="number" value="0" min="0" />
               </form>
             </div>
           </div>
           <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
             <img src="../imagenes/daruma-azul.png" class="card-img-top" alt="Daruma azul" />
-            <div class="card-body">
+            <div class="card-item card-body">
               <h5 class="card-title">Daruma azul</h5>
               <p class="card-text">Trabajo o escuela. Representa la calma, la confianza, la tranquilidad, la honestidad.</p>
               <p id="price_daruma-blue" class="price_amulet"></p>
               <form id="cart_daruma-blue">
                 <button type="submit" class="btn btn-primary">Comprar ahora</button>
-                <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                <button type="submit" class="addCartBtn btn btn-secondary">Agregar al carrito</button>
                 <input id="amount" type="number" value="0" min="0" />
               </form>
             </div>
           </div>
           <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
             <img src="../imagenes/daruma-negro.png" class="card-img-top" alt="Daruma negro" />
-            <div class="card-body">
+            <div class="card-item card-body">
               <h5 class="card-title">Daruma negro</h5>
               <p class="card-text">Seguridad. Está diseñado para prevenir desastres naturales, o cualquier otro mal.</p>
               <p id="price_daruma-black" class="price_amulet"></p>
               <form id="cart_daruma-black">
                 <button type="submit" class="btn btn-primary">Comprar ahora</button>
-                <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                <button type="submit" class="addCartBtn btn btn-secondary">Agregar al carrito</button>
                 <input id="amount" type="number" value="0" min="0" />
               </form>
             </div>
@@ -167,6 +167,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="../aos.js"></script>
     <script src="../Amulets.js"></script>
+    <script src="../data/data.json"></script>
     <script type="text/javascript">
       AOS.init();
     </script>
