--- a/subtitulos/omamori.html
+++ b/subtitulos/omamori.html
@@ -228,6 +228,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="../aos.js"></script>
     <script src="../Amulets.js"></script>
+    <script src="../data/data.json"></script>
     <script type="text/javascript">
       AOS.init();
     </script>
