--- a/carrito.html
+++ b/carrito.html
@@ -57,8 +57,8 @@
                 <a class="nav-link" href="contacto.html">Contáctanos</a>
               </li>
               <li class="nav-item">
-                <a class="logo-cart" href="carrito.html"
-                  ><img src="imagenes/shopping-cart-of-checkered-design.png" alt="Logo carrito" />
+                <a class="nav-link" href="carrito.html"
+                  ><i class="bi bi-cart4"></i>
                   <span class="cart-number">0</span>
                 </a>
               </li>
