--- a/subtitulos/daruma.html
+++ b/subtitulos/daruma.html
@@ -56,8 +56,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="../contacto.html">Contáctanos</a>
               </li>
-              <li class="nav-item cart">
-                <a class="logo-cart" href="../carrito.html"><img src="../imagenes/shopping-cart-of-checkered-design.png" alt="Logo carrito" /> <span class="cart-number">0</span></a>
+              <li class="nav-item">
+                <a class="nav-link" href="../carrito.html"
+                  ><i class="bi bi-cart4"></i>
+                  <span class="cart-number">0</span>
+                </a>
               </li>
             </ul>
           </div>
