--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="description" content="Koinobori Artesanías es una tienda que vende Darumas y Omamoris, amuletos clásicos japoneses, que te protegen, te ayudan y te motivan a cumplir los objetivos fijados." />
     <meta name="keywords" content="daruma, amuleto, suerte, artesanal, artesanias, koinobori, japon, japones, asia, clases de japones, nihongo, nihon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-TSMJCG8");
+    </script>
+    <!-- End Google Tag Manager -->
     <link rel="shortcut icon" type="image/png" href="imagenes/favicon-32.png" sizes="32x32" />
     <link rel="shortcut icon" type="image/png" href="imagenes/favicon-76.png" sizes="76x76" />
     <link rel="shortcut icon" type="image/png" href="imagenes/favicon-96.png" sizes="96x96" />
@@ -23,6 +37,9 @@
     <title>Home | Koinobori</title>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TSMJCG8" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header>
       <!--       NAV         -->
       <nav class="navbar navbar-expand-lg navbar-light">
